fix nav link gap

--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body{
 .navlinks {
     display:flex;
     justify-content: center;
-    gap: 10px;
+    gap: 20px;
 
 }
 .navlinks a{
